unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Edit_Task_Manager__c.field-meta.xml
<CustomField>
    <fullName>pse__Edit_Task_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this user can edit project task details in Project Task Gantt and Gantt.</inlineHelpText>
    <label>Project Task Gantt Edit</label>
    <type>Checkbox</type>
</CustomField>