unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Forecast_Edit__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, provides the user with permissions to adjust revenue forecast version details for specific Regions, Practices, Groups, Projects, and Opportunities.</description>
    <inlineHelpText>Allowed to perform editing on the Forecasts page for the Region/Practice/Group</inlineHelpText>
    <label>Revenue Forecast Version Adjust</label>
    <type>Checkbox</type>
</CustomField>