unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Forecast_View__c.field-meta.xml
<CustomField>
    <fullName>pse__Forecast_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, provides the user with permissions to view revenue forecast version details for specific Regions, Practices, Groups, Projects, and Opportunities. This permission control always cascades even when the Cascading Permission checkbox is deselected.</description>
    <inlineHelpText>Allowed to view the Forecasts page for the Region/Practice/Group</inlineHelpText>
    <label>Revenue Forecast Version View</label>
    <type>Checkbox</type>
</CustomField>