unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Group containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Group.</description>
    <inlineHelpText>This is the Group containing Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Group.</inlineHelpText>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Permission Controls</relationshipLabel>
    <relationshipName>Permission_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>