unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Invoicing__c.field-meta.xml
<CustomField>
    <fullName>pse__Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User's ability to  to edit Invoicing-related fields (Invoiced checkbox, Invoice Date, Invoice Number) for a Project's business records.</description>
    <inlineHelpText>This checkbox governs the User's ability to  to edit Invoicing-related fields (Invoiced checkbox, Invoice Date, Invoice Number) for Project's business records.</inlineHelpText>
    <label>Invoicing</label>
    <type>Checkbox</type>
</CustomField>