unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Project containing Assignments for Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Project, only in relation to the Project.</description>
    <inlineHelpText>This is the Project containing Assignments for Resources that are the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of Resources in this Project, only in relation to the Project.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Permission Controls</relationshipLabel>
    <relationshipName>Permission_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>