unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Resource who is the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of this Resource.</description>
    <inlineHelpText>This is the Resource who is the target of the specified action(s) - e.g. delegated Timecard Entry on behalf of this Resource.</inlineHelpText>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Is_Resource__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Permission Controls</relationshipLabel>
    <relationshipName>Permission_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>