unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Resource_Request_Entry__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User's ability to enter/edit Resource Requests for specified Regions/Practices/Groups.</description>
    <inlineHelpText>This checkbox governs the User's ability to enter/edit Resource Requests for specified Regions/Practices/Groups.</inlineHelpText>
    <label>Resource Request Entry</label>
    <type>Checkbox</type>
</CustomField>