unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Skills_And_Certifications_View__c.field-meta.xml
<CustomField>
    <fullName>pse__Skills_And_Certifications_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User's ability to view Expenses for Resources other than their own. If a user has Edit permission, they implicitly also have View permission.</description>
    <label>Skills And Certifications View</label>
    <type>Checkbox</type>
</CustomField>