unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Staffing__c.field-meta.xml
<CustomField>
    <fullName>pse__Staffing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User's ability to staff Resources from specified Regions/Practices/Groups.</description>
    <inlineHelpText>This checkbox governs the User's ability to staff Resources from specified Regions/Practices/Groups.</inlineHelpText>
    <label>Staffing</label>
    <type>Checkbox</type>
</CustomField>