unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Team_Create__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, grants permission to the user to create a team.</description>
    <inlineHelpText>If selected, grants permission to the user to create a team.</inlineHelpText>
    <label>Team Create</label>
    <type>Checkbox</type>
</CustomField>