unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__Timecard_Entry__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox governs the User's ability to enter/edit Timecards for Resources other than their own.</description>
    <inlineHelpText>This checkbox governs the User's ability to enter/edit Timecards for Resources other than their own.</inlineHelpText>
    <label>Timecard Entry</label>
    <type>Checkbox</type>
</CustomField>