unpackaged/main/default/objects/pse__Permission_Control__c/fields/pse__View_Task_Manager__c.field-meta.xml
<CustomField>
    <fullName>pse__View_Task_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this user can use Project Task Gantt and Gantt in read-only mode.</inlineHelpText>
    <label>Project Task Gantt View</label>
    <type>Checkbox</type>
</CustomField>