unpackaged/main/default/objects/pse__Permission_Control__c/validationRules/pse__Perm_Ctrl_CasscadeCheck_Not_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Perm_Ctrl_CasscadeCheck_Not_Req</fullName>
    <active>true</active>
    <description>Cascading Permission must be deselected when assigning a Team.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(pse__Team__c)), pse__Cascading_Permission__c )</errorConditionFormula>
    <errorMessage>You must deselect Cascading Permission when assigning a Team.</errorMessage>
</ValidationRule>