unpackaged/main/default/objects/pse__Permission_Control__c/validationRules/pse__Permission_Control_User_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Permission_Control_User_Required</fullName>
    <active>true</active>
    <description>Permission Controls must specify a User.</description>
    <errorConditionFormula>OR(ISNULL(pse__User__c),(pse__User__c=''))</errorConditionFormula>
    <errorDisplayField>pse__User__c</errorDisplayField>
    <errorMessage>Permission Controls must specify a User.</errorMessage>
</ValidationRule>