unpackaged/main/default/objects/pse__Permission_Control__c/validationRules/pse__Permission_Must_Have_Target_Entity.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Permission_Must_Have_Target_Entity</fullName>
    <active>true</active>
    <description>Permission Control must reference only one of a Resource, or a Region, Practice, Group, or a Project, Opportunity, or Team.</description>
    <errorConditionFormula>IF(ISBLANK(pse__Resource__c),0,1) +
IF(ISBLANK(pse__Region__c),0,1) +
IF(ISBLANK(pse__Practice__c),0,1) +
IF(ISBLANK(pse__Group__c),0,1) +
IF(ISBLANK(pse__Project__c),0,1) +
IF(ISBLANK(pse__Opportunity__c),0,1) +
IF(ISBLANK(pse__Team__c),0,1) = 0</errorConditionFormula>
    <errorMessage>You must select only one record for the Permission Control. Either a Resource, or a Region, Practice, Group, or a Project, Opportunity, or a Team.</errorMessage>
</ValidationRule>