unpackaged/main/default/objects/pse__Permission_Control__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__User__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Cascading_Permission__c</columns>
    <columns>pse__Resource_Request_Entry__c</columns>
    <columns>pse__Staffing__c</columns>
    <columns>pse__Timecard_Entry__c</columns>
    <columns>pse__Expense_Entry__c</columns>
    <columns>pse__Billing__c</columns>
    <columns>pse__Skills_And_Certifications_Entry__c</columns>
    <columns>pse__Skills_And_Certifications_View__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>